# zerotier-gw-controller

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
debian/: changelog  config.yaml.example  control  copyright  postinst  prerm  rules  zerotier-gateway-controller.service
docs/: configuration.md  installation.md  progress.md
scripts/: ansible-playbook.yaml  build-deb.sh  manage_lima.py
scripts/ansible-role-zerotier-gateway-controller/tasks/: main.yml
src/zerotier_gateway_controller/: __init__.py  cli.py  controller.py
tests/: test_cli.py  test_controller.py
